# sgb-data-validator

./: .env.test  .gitignore  .prettierignore  API.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  IMPLEMENTATION.md  README.md  _brand.yml  _quarto.yml  analyze_diff.py  example.env  export_transformation_diff_csv.py  generate_change_report.py  generate_sample_reports.py  index.qmd  main.py  package-lock.json  package.json  pyproject.toml  test_restore.py  transform.py  tui.py  validate.py  validation-reports.qmd  validation_report.txt  verify_upload.py  workflow.py
.github/: _quarto.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: quarto-publish.yml  validate.yml
data/raw/: vocabularies.json
examples/: ICONCLASS_VALIDATOR.md  ISO639_VALIDATOR.md  MIGRATION.md  api_usage.py  backup_restore_usage.py  iconclass_usage.py  iso639_usage.py  migration_usage.py  transformation_usage.py
examples/sample_reports/: README.md  items_validation.csv  media_validation.csv  validation_report.txt  validation_summary.csv
src/: __init__.py  api.py  iconclass.py  iso639.py  models.py  profiling.py  transformations.py  tui.py  vocabularies.py  wikidata.py
test/: QUICKREF.md  README.md  conftest.py  test_api.py  test_creation.py  test_https_upgrade.py  test_iconclass.py  test_iconclass_integration.py  test_integration_issue31.py  test_iso639.py  test_issue16_validation.py  test_issue22_url_in_literals.py  test_issue31_transformations.py  test_issue36_private_flag.py  test_lru_cache.py  test_offline_workflow.py  test_transformations.py  test_tui.py  test_uri_checking.py  test_validation.py  test_wikidata.py
