[project]
name = "sgb-data-validator"
version = "0.1.0"
description = "A data validator for the Stadt-Geschichte-Basel project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "pandas>=2.2.0",
    "ydata-profiling>=4.10.0",
    "setuptools>=75.0.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.1.1",
    "tabulate>=0.9.0",
]

[project.scripts]
sgb-validate = "validate:main"
sgb-workflow = "workflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["N815"]  # Allow mixedCase for API field names

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["E501"]  # Allow long lines in test files
"test/conftest.py" = ["I001"]  # Allow import order flexibility in conftest

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "mypy>=1.14.0",
    "pytest-asyncio>=1.2.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = [
    "test"
]
markers = [
    "unit: fast, isolated unit tests",
    "integration: integration tests across components",
    "slow: slow-running tests",
]
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning",
]
